--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Asap:400,500,700|Inconsolata:400,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="css/lightbox.css">
+    <link rel="stylesheet" type="text/css" href="css/lightbox.min.css">
 
     <!-- FONT AWESOME ICONS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1"
@@ -29,7 +29,13 @@
                 <h1 class="site-title">SUNDAY DOCTOLERO</h1>
                 <p class="site-description">Web Developer</p>
             </div>
-            <nav class="main-menu">the menu will go here</nav>
+            <nav class="main-menu">
+                <ul>
+                    <li><a href="#">watch</a></li>
+                    <li><a href="#">play</a></li>
+                    <li><a href="#">learn</a></li>
+                </ul>
+            </nav>
         </header>
         <div class="content-area">
             <main class="main-content-area">
@@ -215,52 +221,52 @@
                     <h2 class="section-header">Movies Gallery</h2>
                     <div class="gallery-imgs">
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="images/gallery_1.jpg" data-lightbox="gallery">
                                 <img src="images/gallery_1.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="images/gallery_2.jpg" data-lightbox="gallery">
                                 <img src="images/gallery_2.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="images/gallery_3.jpg" data-lightbox="gallery">
                                 <img src="images/gallery_3.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="images/gallery_4.jpg" data-lightbox="gallery">
                                 <img src="images/gallery_4.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="images/gallery_5.jpg" data-lightbox="gallery">
                                 <img src="images/gallery_5.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="images/gallery_6.jpg" data-lightbox="gallery">
                                 <img src="images/gallery_6.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="images/gallery_7.jpg" data-lightbox="gallery">
                                 <img src="images/gallery_7.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="images/gallery_8.jpg" data-lightbox="gallery">
                                 <img src="images/gallery_8.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="images/gallery_9.jpg" data-lightbox="gallery">
                                 <img src="images/gallery_9.jpg" alt="">
                             </a>
                         </div>
                         <div class="gallery-img">
-                            <a href="#">
+                            <a href="images/gallery_10.jpg" data-lightbox="gallery">
                                 <img src="images/gallery_10.jpg" alt="">
                             </a>
                         </div>
@@ -273,12 +279,85 @@
                 </section>
             </main>
             <div class="sidebar-right">
-                <h1>sidebar goes here</h1>
-                <p>sdlk;jfldsakjf</p>
+                <div class="widget">
+                    <div class="widget-content">
+                        <h3>Top Rated Movies</h3>
+                        <nav class="sidebar-menu">
+                            <ul>
+                                <li>
+                                    <a href="#">The Godfater</a>
+                                </li>
+                                <li>
+                                    <a href="#">The Godfater</a>
+                                </li>
+                                <li>
+                                    <a href="#">The Godfater</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widget-content">
+                        <h3>Top Rated Movies</h3>
+                        <nav class="sidebar-menu">
+                            <ul>
+                                <li>
+                                    <a href="#">The Godfater</a>
+                                </li>
+                                <li>
+                                    <a href="#">The Godfater</a>
+                                </li>
+                                <li>
+                                    <a href="#">The Godfater</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widget-content">
+                        <h3>Top Rated Movies</h3>
+                        <nav class="sidebar-menu">
+                            <ul>
+                                <li>
+                                    <a href="#">The Godfater</a>
+                                </li>
+                                <li>
+                                    <a href="#">The Godfater</a>
+                                </li>
+                                <li>
+                                    <a href="#">The Godfater</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+
+                <div class="widget">
+                    <div class="widget-content">
+                        <h3>Top Rated Movies</h3>
+                        <nav class="sidebar-menu">
+                            <ul>
+                                <li>
+                                    <a href="#">The Godfater</a>
+                                </li>
+                                <li>
+                                    <a href="#">The Godfater</a>
+                                </li>
+                                <li>
+                                    <a href="#">The Godfater</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
             </div>
         </div>
         <footer class="site-footer">
-            <h1>footer</h1>
+            All Right Reserved : Sunday Doctolero | Link Me Software
         </footer>
     </div>
 
@@ -288,6 +367,8 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <!-- Our Script File -->
     <script type="text/javascript" src="js/main.js"></script>
+    <!-- Our Script File -->
+    <script type="text/javascript" src="js/lightbox.min.js"></script>
 
 </body>
 
