--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>The Movies Home</title>
+    <title>Sunday Doctolero | Portfolio</title>
 
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Asap:400,500,700|Inconsolata:400,700" rel="stylesheet">
