--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             </div>
             <nav class="main-menu">
                 <ul>
-                    <li><a href="#">watch</a></li>
-                    <li><a href="#">play</a></li>
-                    <li><a href="#">learn</a></li>
+                    <li><a href="#">Web Development</a></li>
+                    <li><a href="#">IT Technical Support</a></li>
+                    <li><a href="#">Data Entry Specialist</a></li>
                 </ul>
             </nav>
         </header>
