--- a/index.html
+++ b/index.html
@@ -281,17 +281,26 @@
             <div class="sidebar-right">
                 <div class="widget">
                     <div class="widget-content">
-                        <h3>Top Rated Movies</h3>
+                        <h3>Web Development</h3>
                         <nav class="sidebar-menu">
                             <ul>
                                 <li>
-                                    <a href="#">The Godfater</a>
+                                    <a href="#">PHP - Laravel Framework</a>
                                 </li>
                                 <li>
-                                    <a href="#">The Godfater</a>
+                                    <a href="#">HTML</a>
                                 </li>
                                 <li>
-                                    <a href="#">The Godfater</a>
+                                    <a href="#">CSS</a>
+                                </li>
+                                <li>
+                                    <a href="#">Mysql</a>
+                                </li>
+                                <li>
+                                    <a href="#">Vue JS</a>
+                                </li>
+                                <li>
+                                    <a href="#">React JS</a>
                                 </li>
                             </ul>
                         </nav>
