--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <div class="sidebar-right">
                 <div class="widget">
                     <div class="widget-content">
-                        <h3>Web Development</h3>
+                        <h3>Skills</h3>
                         <nav class="sidebar-menu">
                             <ul>
                                 <li>
@@ -328,17 +328,20 @@
 
                 <div class="widget">
                     <div class="widget-content">
-                        <h3>Top Rated Movies</h3>
+                        <h3>Projects</h3>
                         <nav class="sidebar-menu">
                             <ul>
                                 <li>
-                                    <a href="#">The Godfater</a>
+                                    <a href="#">HRIS & Payroll System with Employee Portal</a>
                                 </li>
                                 <li>
-                                    <a href="#">The Godfater</a>
+                                    <a href="#">Real Estate Data Entry Application</a>
                                 </li>
                                 <li>
-                                    <a href="#">The Godfater</a>
+                                    <a href="#">Data Entry Digital Process Application</a>
+                                </li>
+                                <li>
+                                    <a href="#">Voyage Analysis Tool Application</a>
                                 </li>
                             </ul>
                         </nav>
@@ -347,17 +350,17 @@
 
                 <div class="widget">
                     <div class="widget-content">
-                        <h3>Top Rated Movies</h3>
+                        <h3>Fine me online</h3>
                         <nav class="sidebar-menu">
                             <ul>
                                 <li>
-                                    <a href="#">The Godfater</a>
+                                    <a href="#">Skype: sunjhen29</a>
                                 </li>
                                 <li>
-                                    <a href="#">The Godfater</a>
+                                    <a href="#">Facebook: fb.com/sunjhen29</a>
                                 </li>
                                 <li>
-                                    <a href="#">The Godfater</a>
+                                    <a href="#">Github: github.com/sundaydoctolero</a>
                                 </li>
                             </ul>
                         </nav>
