--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <header class="site-header">
             <div class="site-info">
                 <h1 class="site-title">SUNDAY DOCTOLERO</h1>
-                <p class="site-description">Web Developer</p>
+                <p class="site-description">sundaydoctolero2010@gmail.com</p>
             </div>
             <nav class="main-menu">
                 <ul>
@@ -133,7 +133,7 @@
                 </section>
 
                 <section class="watch">
-                    <h2 class="section-header">Watch Today</h2>
+                    <h2 class="section-header">Technical Support</h2>
                     <div class="watch-card">
                         <div class="watch-img">
                             <img src="images/img_8.jpg" alt="">
@@ -288,10 +288,10 @@
                                     <a href="#">PHP - Laravel Framework</a>
                                 </li>
                                 <li>
-                                    <a href="#">HTML</a>
+                                    <a href="#">HTML, CSS</a>
                                 </li>
                                 <li>
-                                    <a href="#">CSS</a>
+                                    <a href="#">REST API</a>
                                 </li>
                                 <li>
                                     <a href="#">Mysql</a>
@@ -309,17 +309,17 @@
 
                 <div class="widget">
                     <div class="widget-content">
-                        <h3>Top Rated Movies</h3>
+                        <h3>Technical Support</h3>
                         <nav class="sidebar-menu">
                             <ul>
                                 <li>
-                                    <a href="#">The Godfater</a>
+                                    <a href="#">Manage Computer Network</a>
                                 </li>
                                 <li>
-                                    <a href="#">The Godfater</a>
+                                    <a href="#">Sophos Firewall Setup</a>
                                 </li>
                                 <li>
-                                    <a href="#">The Godfater</a>
+                                    <a href="#">Computer Hardware Troubleshooting</a>
                                 </li>
                             </ul>
                         </nav>
@@ -354,13 +354,16 @@
                         <nav class="sidebar-menu">
                             <ul>
                                 <li>
-                                    <a href="#">Skype: sunjhen29</a>
+                                    <a href="https://join.skype.com/invite/Mja6ryAkUZgM">Skype: sunjhen29</a>
                                 </li>
                                 <li>
-                                    <a href="#">Facebook: fb.com/sunjhen29</a>
+                                    <a href="https://www.facebook.com/sunjhen29">Facebook: fb.com/sunjhen29</a>
                                 </li>
                                 <li>
-                                    <a href="#">Github: github.com/sundaydoctolero</a>
+                                    <a href="https://github.com/sundaydoctolero">Github: github.com/sundaydoctolero</a>
+                                </li>
+                                <li>
+                                    <a href="https://www.linkedin.com/in/sunjhen29">LinkedIn: linkedin.com/in/sunjhen29</a>
                                 </li>
                             </ul>
                         </nav>
@@ -369,7 +372,7 @@
             </div>
         </div>
         <footer class="site-footer">
-            All Right Reserved : Sunday Doctolero | Link Me Software
+            All Right Reserved @ 2020 | Sunday Doctolero
         </footer>
     </div>
 
